# agent-voice

./: README.md  main.py  pyproject.toml
src/: fastrtc_groq_voice_stream.py  process_groq_tts.py  process_kokoro_tts.py  simple_math_agent.py
