[project]
name = "agent-voice"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastrtc[stt]>=0.0.30",
    "kokoro-onnx>=0.4.9",
    "loguru>=0.7.3",
    "ollama>=0.5.3",
    "openai>=1.99.9",
    "python-dotenv>=1.1.1",
]
